<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headingLayouts"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_video_settings"
        android:theme="@style/Heading" />

    <LinearLayout
        style="@style/SettingsItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_save_video_path"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_save_video_path_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_not_selected"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_save_video_path_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_change" />
    </LinearLayout>

    <LinearLayout
        style="@style/SettingsItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_video_resolution"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_video_resolution_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_not_selected"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_video_resolution_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/settings_change" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="Camera info"
        android:theme="@style/Heading" />

    <LinearLayout
        style="@style/SettingsItemContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGetCamInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="Get Info" />

    </LinearLayout>
</LinearLayout>